# remotefs-rs-kube

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: delete-all.sh  integration-tests.sh
src/: client.rs  kube_container_fs.rs  kube_multipod_fs.rs  lib.rs
src/kube_multipod_fs/: path.rs
